# configurator

./: Makefile  README.md  README.org  configurator.opam  dune-project
src/: configurator.ml  configurator.mli  dune  jbuild
