opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/configurator"
bug-reports: "https://github.com/janestreet/configurator/issues"
dev-repo: "git+https://github.com/janestreet/configurator.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.3"}
]
post-messages: [
  "configurator has been integrated into the dune package. The configurator \
   package is now a transition package. Use the dune.configurator library
   instead."
]
synopsis:
  "This is a transition package, configurator has been integrated into dune"
